# goosling

./: .gitignore  Cargo.toml  README.md  limine.cfg  linker.ld  makefile  x86_64-freestanding.json
.cargo/: config.toml  kernel.ld  x86_64-goosling.json
.github/workflows/: workflow.yml
src/: arch.rs  debug.rs  exceptions.rs  limine.cfg  main.rs  memory.rs  sync.rs  task.rs  tasks.rs  terminals.rs
src/arch/: interrupt.asm  traits.rs  x86_64.rs
