[package]
name = "goosling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = "0.1.6"
numtoa = "0.2.4"
seq-macro = "0.3.0"
spin = {version = "0.9.3", features = ["mutex", "ticket_mutex"]}
static_assertions = "1.1.0"

[profile.release]
strip = true
opt-level = 3